# RayTracingInOneWeekend

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json
RayTracing/: CMakeLists.txt  main.cpp
RayTracing/include/: ImageManager.hpp
RayTracing/src/: CMakeLists.txt  ImageManager.cpp
